# Ocaml_chat

./: README.md  dune-project
_build/: .db  .digest-db  log
_build/default/: README.md  test_task.dune-package  test_task.install
_build/default/.dune/: configurator  configurator.v2
_build/default/lib/: overlap.ml  server.ml  test_task.cma  test_task.cmxa  test_task.cmxs  test_task.ml-gen  time.ml
_build/default/lib/.merlin-conf/: lib-test_task
_build/default/lib/.test_task.objs/: test_task__Client.impl.d  test_task__Overlap.impl.all-deps  test_task__Overlap.impl.d  test_task__Server.impl.all-deps  test_task__Server.impl.d  test_task__Time.impl.d
_build/default/lib/.test_task.objs/byte/: test_task.cmi  test_task.cmo  test_task.cmt  test_task__Client.cmi  test_task__Client.cmo  test_task__Client.cmt  test_task__Overlap.cmi  test_task__Overlap.cmo  test_task__Overlap.cmt  test_task__Server.cmi  test_task__Server.cmo  test_task__Server.cmt  test_task__Time.cmi  test_task__Time.cmo  test_task__Time.cmt
_build/default/lib/.test_task.objs/native/: test_task.cmx  test_task__Client.cmx  test_task__Overlap.cmx  test_task__Server.cmx  test_task__Time.cmx
_build/install/default/lib/test_task/: META  dune-package
lib/: client.ml  dune
